HashCode work
Rework to hash files and compare with the server. Untested as the server
did not yet provide this and is currently offline